# dolibarr-mcp

./: .gitignore  BackendMods.md  DocParamAudit.md  Dockerfile  README.md  SubResourceFilterPlan.md  fix_docstrings.py  pyproject.toml  tests.diff
.github/workflows/: docker-publish.yml
src/: client.py  main.py  test_runner.py  test_runner_v2.py
