[project]
name = "dolibarr-mcp-server"
version = "0.1.0"
description = "Multi-tenant MCP Proxy Server for Dolibarr ERP/CRM"
authors = [{name = "Expert Developer"}]
dependencies = [
    "fastmcp==3.4.2",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.29.0",
    "toon-mcp-server>=0.1.0",
]
requires-python = ">=3.12"
